--- a/app/src/main/res/layout/activity_notedetail.xml
+++ b/app/src/main/res/layout/activity_notedetail.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/baseline_menu_24"
         app:navigationContentDescription="baseline_arrow_back_ios_24.xml"
         app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
         app:title="UserName" />
